--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@ Today, BMIcare stands as a testament to the power of passion, perseverance, and 
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Have questions or feedback? We'd love to hear from you! Reach out to us at contact@bmicare.com</p>
+            <p>Have questions or feedback? We'd love to hear from you! Reach out to us at kipsamoh@gmail.com</p>
         </section>
 
         <!-- Help Section -->
         <section id="help">
             <h2>Need Help?</h2>
-            <p>If you need assistance or have any inquiries regarding how to use BMIcare, check out our FAQ section or contact our support team for personalized assistance.</p>
+            <p>If you need assistance or have any inquiries regarding how to use BMIcare, contact us via contacts on our about page secton for personalized assistance.</p>
         </section>
 
         <!-- Footer Section -->
