--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
         <!-- Feature Section -->
         <section id="features">
             <div class="feature">
-                <img src="images/feature1_image.jpg" alt="Feature 1">
+                <img src="images/feature1_image.jpg" alt="bmi app image">
                 <h2>Calculate BMI Seamlessly</h2>
                 <p> Calculate your Body Mass Index (BMI) instantly with our easy-to-use BMI calculator. Simply input your height and weight into our intuitive interface, and receive your BMI along with a personalized interpretation of what it means for your health. Whether you're aiming to maintain a healthy weight, track your fitness progress, or manage your overall well-being, our BMI calculator provides you with quick and accurate results, empowering you to make informed decisions about your health journey. </p>
             </div>
             <div class="feature">
-                <img src="images/feature2_image.jpg" alt="Feature 2">
+                <img src="images/feature2_image.jpg" alt="data site">
                 <h2> Health Insights At Your Fingertips</h2>
                 <p>Dive into a wealth of insights regarding your health status through our BMI calculator's comprehensive analysis. Uncover the significance of Body Mass Index (BMI) and its profound implications for your overall well-being. With each BMI result generated, our platform offers a nuanced interpretation, guiding you through the intricacies of BMI and its relevance to your health journey.
 
@@ -141,7 +141,7 @@ Unlock the implications of BMI for your overall well-being, including its impact
 Empower yourself with knowledge and insight as you embark on your health journey. With our BMI calculator, you're not just receiving a number—you're gaining valuable insights that will help you make meaningful changes to support your long-term health and wellness goals</p>
             </div>
             <div class="feature">
-                <img src="images/feature3_image.jpg" alt="Feature 3">
+                <img src="images/feature3_image.jpg" alt="Friendly bmicare app">
                 <h2> Enjoy User-Friendly Interface</h2>
                 <p>BMIcare has been meticulously crafted with a singular objective: to furnish individuals with a user-friendly yet potent tool for meticulously tracking their body mass index (BMI) and attaining profound insights into their comprehensive health status. At the core of our mission lies an unwavering dedication to fostering health awareness and nurturing well-being through the seamless integration of accessible technology.
 
